Adicionando novas opções de customização da notificiação do Discord Webhook.

--- a/config.properties
+++ b/config.properties
@@ -2,7 +2,10 @@ notify.service.ping.url=https://www.google.com.br
 notify.service.ping.httpMethod=GET
 notify.service.ping.sendPayload=false
 notify.service.fall.discord.webhook.url=https://discord.com/api/webhooks/1295401051209597059/UTLZMTP1nsPDeE6LOQdcTx-8oxl1dM9GFMtieAbH1KJieKT91fX5O0-iPyDOh7BMwrmv
+notify.service.fall.discord.webhook.username=Owlet service
+notify.service.fall.discord.webhook.avatarUrl=https://i.imgur.com/oBPXx0D.png
 notify.service.fall.discord.webhook.messageTemplate=The service {serviceName} of the {applicationName} fell in {time}.
+notify.service.fall.discord.webhook.dateTimePattern=dd/MM/yyyy HH:mm:ss
 client.service.1.url=https://www.google.com.br
 client.service.1.httpMethod=GET
 client.service.1.serviceName=Google Service
