Adicionado a opção de executar um command no Sistema Operacional quando o serviço estiver parado.

--- a/config.properties
+++ b/config.properties
@@ -24,6 +24,7 @@ client.service.2.checkPeriodInMilliseconds=10000
 client.service.2.timeoutConnectionInMilliseconds=10000
 client.service.2.maxFailureForCheckIfServiceIsDown=2
 client.service.2.periodForNewCheckAfterFailure=20000
+client.service.2.commandWillRunWhenServiceIsDown=ping localhost -c 5
 client.service.3.url=http://localhost3
 client.service.3.httpMethod=GET
 client.service.3.serviceName=My webservice 3
